--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
   "version": "0.0.1",
   "description": "Create docker for single page application",
   "author": "qiuhongbingo@outlook.com",
+  "main": "lib/index.js",
+  "bin": {
+    "create-spa-docker": "./lib/index.js"
+  },
   "license": "MIT",
   "scripts": {
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "release": "tsc & release-it"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/qhbhq/create-spa-docker"
+  },
+  "files": [
+    "lib",
+    "generators"
+  ],
+  "keywords": [
+    "spa",
+    "nginx",
+    "docker"
+  ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
     "chalk": "^4.1.0",
@@ -18,6 +39,13 @@
   "devDependencies": {
     "@types/yeoman-environment": "^2.10.2",
     "@types/yeoman-generator": "^4.11.3",
+    "release-it": "^14.4.1",
     "typescript": "^4.1.5"
+  },
+  "release-it": {
+    "git": {
+      "tag": false,
+      "commitMessage": "chore: release create-spa-docker@${version}"
+    }
   }
 }
